Adding exploratory support for ChronicleMap, only unit test for now