@@ -26,6 +26,11 @@
       <artifactId>lucene-core</artifactId>
       <version>9.5.0</version>
     </dependency>
+    <dependency>
+      <groupId>net.openhft</groupId>
+      <artifactId>chronicle-map</artifactId>
+      <version>3.24ea2</version>
+    </dependency>
 
     <!-- Utility libs -->
     <dependency>
@@ -191,6 +196,21 @@
           <release>17</release>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+            <argLine>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED 
+              --add-exports=java.base/sun.nio.ch=ALL-UNNAMED 
+              --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED 
+              --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED 
+              --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED 
+              --add-opens=java.base/java.lang=ALL-UNNAMED 
+              --add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
+              --add-opens=java.base/java.io=ALL-UNNAMED 
+              --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+        </configuration>
+    </plugin>
       <plugin>
         <groupId>net.revelc.code.formatter</groupId>
         <artifactId>formatter-maven-plugin</artifactId>
